edit cer and profile

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ body {
+  font-size: clamp(23px, 2.1vw, 2rem);
+ }
 :root {
   --bs-blue: #1D809F;
   --bs-indigo: #6610f2;
@@ -11341,7 +11344,7 @@ html {
   height: 100%;
   transition: all 0.4s ease 0s;
   transform: translateX(250px);
-  background: #1D809F;
+  background: #ef6c00;
   border-left: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -11437,6 +11440,8 @@ html {
 
 footer.footer {
   padding-bottom: 0rem;
+  text-align: center;
+  justify-content: space-between;
 }
 footer.footer .social-link {
   display: block;
